--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "node": true
   },
   "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended"],
+  "ignorePatterns": "node_modules/",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
